--- a/package.json
+++ b/package.json
@@ -4,8 +4,26 @@
   "description": "a management application for appartments ",
   "main": "index.js",
   "scripts": {
+    "build": "tsc",
+    "start": " node dist/server.js",
+    "typescript:watch": "tsc -w ",
+    "nodemon:watch": "nodemon dist/server.js",
+    "dev": "concurrently --kill-others \"npm run typescript:watch\" \"npm run nodemon:watch\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "ali salehi",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "dotenv": "^16.0.1",
+    "express": "^4.18.1",
+    "mongoose": "^6.3.4"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.13",
+    "@types/node": "^17.0.35",
+    "concurrently": "^7.2.1",
+    "nodemon": "^2.0.16",
+    "ts-node": "^10.8.0",
+    "typescript": "^4.6.4"
+  }
 }
