--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "ali salehi",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "moment": "^2.29.3",
